--- a/.github/workflows/firebase-hosting-push.yml
+++ b/.github/workflows/firebase-hosting-push.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build_and_preview:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,3 +19,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SVELTE_IMPOTS }}'
           projectId: svelte-impots
+          channelId: live
